sass/site.scss
$bg: light-dark(#fafafa, #141617);
$fg: light-dark(#4d4d4c, #cacdcb);
$accent: light-dark(#eab700ff, #f0c674ff);
$accent-dark: light-dark(#e0e0e0, #2d2f31);
$bg-code: light-dark(#ffffff, #1d1f21);

$font-header: "Instrument Sans", sans-serif;
$font-content: "Lora", serif;
$font-code: "Jetbrains Mono", monospace;

@mixin underline {
  text-decoration: underline;
  text-underline-offset: 0.1em;
  text-decoration-thickness: 0.1em;
  text-decoration-color: $accent;
}

:root {
  color-scheme: light dark;
}

.giallo {
  padding: 1em;
  font-family: $font-code;
}

.giallo-l {
  display: inline-block;
  min-height: 1lh;
  width: 100%;
}

.giallo-ln {
  display: inline-block;
  user-select: none;
  margin-right: 0.4em;
  padding: 0.4em;
  min-width: 3ch;
  text-align: right;
  opacity: 0.8;
}

p > code {
  padding: 0.5ch;
  white-space: nowrap;
  background-color: $bg-code;
}

.footnote-reference {
  margin-right: 0.5ch;
}

.footnotes {
  font-size: smaller;
  border-top: 1px solid $accent-dark;
  padding-top: 2rem;
  margin-top: 2rem;
}

.footnotes-list {
  margin: 0;
  padding-left: 1.5em;

  li {
    margin-bottom: 1em;
  }

  li:last-child {
    margin-bottom: 0;
  }

  p {
    display: inline;
  }
}

.posts-list {
  display: flex;
  flex-direction: column;
  gap: 1em;
}

.summary {
  text-decoration: none;
  line-height: 1.6;
}

.summary-title {
  @include underline;

  margin: 0;
}

.summary-tagline {
  // Override color change on focus.
  color: $fg;
  margin: 0;
}

.post-tagline {
  margin: 0.5em 0;
}

.post-time {
  // Override color change on focus.
  color: $fg;
  font-family: $font-header;
  font-size: smaller;
  opacity: 0.5;
  display: flex;
  gap: 1em;
}

.post-nav {
  display: flex;
  justify-content: space-between;
  font-family: $font-header;
  font-size: smaller;
  margin-top: 2rem;

  a {
    display: inline-flex;
    gap: 1em;
    align-items: center;
    text-decoration: none;
    max-width: 45%;
  }

  .post-nav-title {
    @include underline;
  }

  .post-nav-next {
    margin-left: auto;
    text-align: right;
  }
}

.page-not-found {
  text-align: center;
}

h1, h2, h3, h4, h5, h6 {
  font-family: $font-header;
}

.terms {
  font-weight: bold;
}

.term {
  @include underline;
}

a {
  @include underline;
}

a, a:visited, a:active {
  color: inherit;
}

a:hover {
  color: $accent;
}

a:focus-visible {
  color: $accent;
  outline: none;
}

hr {
  color: $accent-dark;
}

body {
  background-color: $bg;
  color: $fg;
  display: grid;
  grid-template-columns: minmax(auto, 625px);
  justify-content: center;
  margin: 2em;
  font-family: $font-content;

  > header {
    h2, h3 {
      margin: 0;
    }
  }

  > main {
    p {
      line-height: 1.6;
      margin: 1.5em 0;
    }
  }

  > footer {
    text-align: center;
    font-size: small;
    margin-top: 2rem;

    img {
      max-width: 1em;
      max-height: 1em;
    }

    p {
      margin-bottom: 0;
    }

    svg {
      width: 1.5rem;
      height: 1.5rem;
    }
  }
}

